[package]
name = "editdistancek"
version = "0.1.0"
authors = ["Nikolai Karpov <kimaska@gmail.com>"]
description = "Fast algorithm for computing edit distance"
repository = "https://github.com/nkkarpov/editdistancek"
documentation = "https://github.com/nkkarpov/editdistancek"
rust-version = "1.62"
readme = "README.md"
license-file = "LICENSE"
keywords = ["text-processing", "search", "spelling", "distance", "edit", "ukkonen"]
edition = "2021"


[dev-dependencies]

quickcheck = { version = "^1.0.3" }
levenshtein = { version = "^1.0.5" }
